force-app/main/default/objects/Advocacy__c/Advocacy__c.object-meta.xml
<CustomObject>
    <label>Advocacy</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advocacies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>