force-app/main/default/objects/Advocacy__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service</label>
    <type>TextArea</type>
</CustomField>