force-app/main/default/objects/Advocacy__c/fields/Site_if_in_house__c.field-meta.xml
<CustomField>
    <fullName>Site_if_in_house__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site (if in-house)</label>
    <type>TextArea</type>
</CustomField>