force-app/main/default/objects/Advocacy__c/fields/Vendor_Model__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor/Model</label>
    <type>TextArea</type>
</CustomField>